Remove unnecessary entries from gitignore and switch from lein to deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-/target
-/classes
-/checkouts
-profiles.clj
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-.hgignore
-.hg/
 .calva/
 .clj-kondo/
+.cpcache/
 .lsp/
+.nrepl-port
